log
Thu 11 May 2023 04:54:57 PM UTC: 
 tests:  0|4
total_score: 0/70
b8a3bb1
Thu 11 May 2023 05:00:17 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
f5c716a
Thu 11 May 2023 05:07:37 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:33:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   33 |   if(pq->size == 0) return NULL;
      |                            ^~~~
heap.c:31:6: note: declared here
   31 | void heap_pop(Heap* pq)
      |      ^~~~~~~~
heap.c:35:23: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   35 |   return pq->heapArray[0];
      |          ~~~~~~~~~~~~~^~~
heap.c:31:6: note: declared here
   31 | void heap_pop(Heap* pq)
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cd86e70
Thu 11 May 2023 05:08:03 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:33:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   33 |   if(pq->size == 0) return NULL;
      |                            ^~~~
heap.c:31:6: note: declared here
   31 | void heap_pop(Heap* pq)
      |      ^~~~~~~~
heap.c:35:26: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   35 |   return pq->heapArray[0].data;
      |          ~~~~~~~~~~~~~~~~^~~~~
heap.c:31:6: note: declared here
   31 | void heap_pop(Heap* pq)
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
48a5fff
Thu 11 May 2023 05:11:16 PM UTC: 
 heap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:26: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   24 |   return pq->heapArray[0]->data;
      |                          ^~
heap.c:25:3: error: control reaches end of non-void function [-Werror=return-type]
   25 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
35f6b57
Thu 11 May 2023 05:11:33 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
069acf9
Thu 11 May 2023 06:20:54 PM UTC: 
 heap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
6eae2c7
Thu 11 May 2023 06:23:48 PM UTC: 
 heap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:4:
heap.c:60:1: error: expected identifier or ‘(’ before ‘}’ token
   60 | }
      | ^
Compilation failed
9cd9cac
Thu 11 May 2023 06:24:20 PM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
73d7da7
